[Fix]: Fix get user by id from token
