# internal/routes/user.go
@@ -11,7 +11,7 @@ func userRoute(r *gin.Engine, h *handlers.Handlers) {
 	{
 		api.POST("/create", h.UserHandler.Create)
 		api.GET("/all", h.UserHandler.GetAll)
-		api.GET("/:id", h.UserHandler.GetById)
+		api.GET("", h.UserHandler.GetByToken)
 		api.GET("/by-email", h.UserHandler.GetByEmail)
 		api.DELETE("", h.UserHandler.Delete)
 	}
